--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <p>
               Vim custom configuration, oriented for web developers (rails, ruby, php, html, css, SCSS, javascript)
               </p>
-              <a href="/v_ide">View Project</a>
+              <a href="/v-ide">View Project</a>
             </div>
             <!-- End .project-info -->
           </div>
