Added my short short bio and changed favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <title>Welcome</title>
+    <title>LM</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,9 +82,9 @@
           </div>
           <div class="col-md-8">
             <p>
-            I'm a full stack developer with very broad interests ranging from software development to system administration. I always like learning new things and working in a team.
+            I'm a full stack developer with very broad interests ranging from software development to system administration. I like learning new things and I'm a proud Debian and Vim user.
             <br>
-            Proud Debian user and Vim lover.
+            Hiking and photography lover.
             </p>
           </div>
         </div>
