--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p>
             I'm a full stack developer with very broad interests ranging from software development to system administration. I like learning new things and I'm a proud Debian and Vim user.
             <br>
-            Hiking and photography lover.
+            Climbing and hiking lover.
             </p>
           </div>
         </div>
