--- a/index.html
+++ b/index.html
@@ -139,6 +139,21 @@
             <!-- End .project-info -->
           </div>
           <!-- End .project -->
+          <div class="project shadow-large">
+            <div class="project-image">
+              <img src="images/project.jpg" />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3>V-Ide</h3>
+              <p>
+              NVim custom configuration, oriented for web developers (rails, ruby, php, html, css, SCSS, javascript)
+              </p>
+              <a href="/nv-ide">View Project</a>
+            </div>
+            <!-- End .project-info -->
+          </div>
+          <!-- End .project -->
 
         </div>
       </div>
