--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>V-Ide</h3>
+              <h3>NV-Ide</h3>
               <p>
               NVim custom configuration, oriented for web developers (rails, ruby, php, html, css, SCSS, javascript)
               </p>
