--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="terminal container">
+  <div class="terminal">
     <div class="folders mb-3">
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide">nv-ide/</a></span>
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files">dot_files/</a></span>
