--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <body>
   <div class="terminal">
     <div class="folders mb-3">
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide">nv-ide/</a></span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files">dot_files/</a></span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/FTBLegends">FTBLegends/</a></span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck">gcheck/</a></span>
-      <span class="folder text-uppercase"><a href="https://www.aretes.net">work/</a></span>
+      <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide" target="_blank">nv-ide/</a></span>
+      <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files" target="_blank">dot_files/</a></span>
+      <span class="folder text-uppercase"><a href="https://locatelli.dev/FTBLegends" target="_blank">FTBLegends/</a></span>
+      <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck" target="_blank">gcheck/</a></span>
+      <span class="folder text-uppercase"><a href="https://www.aretes.net" target="_blank">work/</a></span>
     </div>
     <pre id="terminal-content" class="mb-3">
       <span class="prompt">❯</span> <span class="command">whoami</span>
