--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains+Mono:400,500,700&display=swap">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ryanoasis/nerd-fonts@2.3.3/css/JetBrainsMono.css">
   <link rel="stylesheet" href="terminal.css">
   <link rel="apple-touch-icon" href="images/favicon/favicon.png">
   <link rel="icon" href="images/favicon/favicon.png">
@@ -28,8 +29,10 @@
   <div class="terminal">
     <div class="folders mb-3">
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide" target="_blank">nv-ide/</a></span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files" target="_blank">dot_files/</a></span>
-      <span class="folder text-uppercase"><a href="https://locatelli.dev/FTBLegends" target="_blank">FTBLegends/</a></span>
+      <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files"
+          target="_blank">dot_files/</a></span>
+      <span class="folder text-uppercase"><a href="https://locatelli.dev/FTBLegends"
+          target="_blank">FTBLegends/</a></span>
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck" target="_blank">gcheck/</a></span>
       <span class="folder text-uppercase"><a href="https://www.aretes.net" target="_blank">work/</a></span>
     </div>
@@ -37,15 +40,14 @@
       <span class="prompt">❯</span> <span class="command">whoami</span>
       <span class="info">Mauro Locatelli</span> — Full Stack Developer passionate about Ruby on Rails, Modern
       JavaScript, C#, and Cloud Solutions
-
       <span class="prompt">❯</span> <span class="command">cat about.md</span>
-      - 🇮🇹 Based in Italy
-      - 💎 Ruby on Rails specialist, focused on elegant, idiomatic code
-      - ⚡️ Proficient in JavaScript, Bootstrap, C#, PHP
-      - ☁️ Experienced with all major cloud platforms, mainly Google Cloud Platform
-      - 🧑‍💻 Advocate for clean, readable, robust code
-      - 🧗‍♂️ Climbing enthusiast
-      - 🎲 Tabletop RPG fan
+      - <span class="nf nf-md-flag"></span> Based in Italy
+      - <span class="nf nf-dev-ruby"></span> Ruby on Rails specialist, focused on elegant, idiomatic code
+      - <span class="nf nf-fa-bolt"></span> Proficient in JavaScript, Bootstrap, C#, PHP
+      - <span class="nf nf-fa-cloud"></span> Experienced with all major cloud platforms, mainly Google Cloud Platform
+      - <span class="nf nf-oct-code"></span> Advocate for clean, readable, robust code
+      - <span class="nf nf-fa-tree"></span> Climbing enthusiast
+      - <span class="nf nf-md-dice_multiple"></span> Tabletop RPG fan
 
       <span class="prompt">❯</span> <span class="command">cat stack.txt</span>
       - OS: Debian — reliable, stable, dev-friendly
