--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains+Mono:400,500,700&display=swap">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ryanoasis/nerd-fonts@2.3.3/css/JetBrainsMono.css">
+  <link rel="stylesheet" href="https://www.nerdfonts.com/assets/css/webfont.css">
   <link rel="stylesheet" href="terminal.css">
   <link rel="apple-touch-icon" href="images/favicon/favicon.png">
   <link rel="icon" href="images/favicon/favicon.png">
