--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <body>
   <div class="terminal">
-    <div class="folders mb-3">
+    <pre id="terminal-content" class="mb-3">
+      <span class="prompt">❯</span> <span class="command">ls</span>
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide" target="_blank">nv-ide/</a></span>
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files"
           target="_blank">dot_files/</a></span>
@@ -35,11 +36,11 @@
           target="_blank">FTBLegends/</a></span>
       <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck" target="_blank">gcheck/</a></span>
       <span class="folder text-uppercase"><a href="https://www.aretes.net" target="_blank">work/</a></span>
-    </div>
-    <pre id="terminal-content" class="mb-3">
+
       <span class="prompt">❯</span> <span class="command">whoami</span>
       <span class="info">Mauro Locatelli</span> — Full Stack Developer passionate about Ruby on Rails, Modern
       JavaScript, C#, and Cloud Solutions
+
       <span class="prompt">❯</span> <span class="command">cat about.md</span>
       - <span class="nf nf-md-flag"></span> Based in Italy
       - <span class="nf nf-dev-ruby"></span> Ruby on Rails specialist, focused on elegant, idiomatic code
@@ -49,14 +50,14 @@
       - <span class="nf nf-fa-tree"></span> Climbing enthusiast
       - <span class="nf nf-md-dice_multiple"></span> Tabletop RPG fan
 
-      <span class="prompt">❯</span> <span class="command">cat stack.txt</span>
+      <span class="prompt">❯</span> <span class="command">cat stack.md</span>
       - OS: Debian — reliable, stable, dev-friendly
       - Editor: Neovim (nv-ide)
       - Shell: zsh + zinit
       - Terminal: Ghostty
       - Dotfiles: <a href="https://github.com/crivotz/dot_files" target="_blank">dot_files</a>
 
-      <span class="prompt">❯</span> <span class="command">cat contact.txt</span>
+      <span class="prompt">❯</span> <span class="command">cat contact.md</span>
       - <a href="https://linkedin.com/in/maurolocatelli" target="_blank">Linkedin</a>
       - <a href="https://stackoverflow.com/users/3037432" target="_blank">Stack Overflow</a>
       - <a href="https://github.com/crivotz" target="_blank">GitHub</a>
