--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       JavaScript, C#, and Cloud Solutions
 
       <span class="prompt">❯</span> <span class="command">cat about.md</span>
-      - <span class="nf nf-md-flag"></span> Based in Italy
-      - <span class="nf nf-dev-ruby"></span> Ruby on Rails specialist, focused on elegant, idiomatic code
-      - <span class="nf nf-fa-bolt"></span> Proficient in JavaScript, Bootstrap, C#, PHP
-      - <span class="nf nf-fa-cloud"></span> Experienced with all major cloud platforms, mainly Google Cloud Platform
-      - <span class="nf nf-oct-code"></span> Advocate for clean, readable, robust code
-      - <span class="nf nf-fa-tree"></span> Climbing enthusiast
-      - <span class="nf nf-md-dice_multiple"></span> Tabletop RPG fan
+      - <span class="nf nf-md-flag"></span>  Based in Italy
+      - <span class="nf nf-dev-ruby"></span>  Ruby on Rails specialist, focused on elegant, idiomatic code
+      - <span class="nf nf-fa-bolt"></span>  Proficient in JavaScript, Bootstrap, C#, PHP
+      - <span class="nf nf-fa-cloud"></span>  Experienced with all major cloud platforms, mainly Google Cloud Platform
+      - <span class="nf nf-oct-code"></span>  Advocate for clean, readable, robust code
+      - <span class="nf nf-faemountains"></span>  Climbing enthusiast
+      - <span class="nf nf-fa-dice_d20"></span>  Tabletop RPG fan
 
       <span class="prompt">❯</span> <span class="command">cat stack.md</span>
       - OS: Debian — reliable, stable, dev-friendly
