fix order and folders

--- a/index.html
+++ b/index.html
@@ -28,27 +28,18 @@
 <body>
   <div class="terminal">
     <pre id="terminal-content" class="mb-3">
-      <span class="prompt">❯</span> <span class="command">ls</span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide" target="_blank">nv-ide/</a></span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files"
-          target="_blank">dot_files/</a></span>
-      <span class="folder text-uppercase"><a href="https://locatelli.dev/FTBLegends"
-          target="_blank">FTBLegends/</a></span>
-      <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck" target="_blank">gcheck/</a></span>
-      <span class="folder text-uppercase"><a href="https://www.aretes.net" target="_blank">work/</a></span>
-
       <span class="prompt">❯</span> <span class="command">whoami</span>
       <span class="info">Mauro Locatelli</span> — Full Stack Developer passionate about Ruby on Rails, Modern
       JavaScript, C#, and Cloud Solutions
 
       <span class="prompt">❯</span> <span class="command">cat about.md</span>
-      - <span class="nf nf-md-flag"></span>  Based in Italy
-      - <span class="nf nf-dev-ruby"></span>  Ruby on Rails specialist, focused on elegant, idiomatic code
-      - <span class="nf nf-fa-bolt"></span>  Proficient in JavaScript, Bootstrap, C#, PHP
-      - <span class="nf nf-fa-cloud"></span>  Experienced with all major cloud platforms, mainly Google Cloud Platform
-      - <span class="nf nf-oct-code"></span>  Advocate for clean, readable, robust code
-      - <span class="nf nf-faemountains"></span>  Climbing enthusiast
-      - <span class="nf nf-fa-dice_d20"></span>  Tabletop RPG fan
+      - <span class="nf nf-md-flag"></span> Based in Italy
+      - <span class="nf nf-dev-ruby"></span> Ruby on Rails specialist, focused on elegant, idiomatic code
+      - <span class="nf nf-fa-bolt"></span> Proficient in JavaScript, Bootstrap, C#, PHP
+      - <span class="nf nf-fa-cloud"></span> Experienced with all major cloud platforms, mainly Google Cloud Platform
+      - <span class="nf nf-oct-code"></span> Advocate for clean, readable, robust code
+      - <span class="nf nf-faemountains"></span> Climbing enthusiast
+      - <span class="nf nf-fa-dice_d20"></span> Tabletop RPG fan
 
       <span class="prompt">❯</span> <span class="command">cat stack.md</span>
       - OS: Debian — reliable, stable, dev-friendly
@@ -61,6 +52,19 @@
       - <a href="https://linkedin.com/in/maurolocatelli" target="_blank">Linkedin</a>
       - <a href="https://stackoverflow.com/users/3037432" target="_blank">Stack Overflow</a>
       - <a href="https://github.com/crivotz" target="_blank">GitHub</a>
+
+      <span class="prompt">❯</span> <span class="command">ls</span>
+      <div class="folders">
+        <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide"
+            target="_blank">nv-ide/</a></span>
+        <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files"
+            target="_blank">dot_files/</a></span>
+        <span class="folder text-uppercase"><a href="https://locatelli.dev/FTBLegends"
+            target="_blank">FTBLegends/</a></span>
+        <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck"
+            target="_blank">gcheck/</a></span>
+        <span class="folder text-uppercase"><a href="https://www.aretes.net" target="_blank">work/</a></span>
+      </div>
 
       <span class="prompt">❯</span> _
     </pre>
