--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <meta name="robots" content="index,follow">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains+Mono:400,500,700&display=swap">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://www.nerdfonts.com/assets/css/webfont.css">
   <link rel="stylesheet" href="terminal.css">
@@ -54,17 +53,17 @@
       - <a href="https://github.com/crivotz" target="_blank">GitHub</a>
 
       <span class="prompt">❯</span> <span class="command">ls</span>
-      <div class="folders">
-        <span class="folder text-uppercase"><a href="https://github.com/crivotz/nv-ide"
+      <span class="folders">
+        <span class="folder"><a href="https://github.com/crivotz/nv-ide"
             target="_blank">nv-ide/</a></span>
-        <span class="folder text-uppercase"><a href="https://github.com/crivotz/dot_files"
+        <span class="folder"><a href="https://github.com/crivotz/dot_files"
             target="_blank">dot_files/</a></span>
-        <span class="folder text-uppercase"><a href="https://locatelli.dev/FTBLegends"
+        <span class="folder"><a href="https://locatelli.dev/FTBLegends"
             target="_blank">FTBLegends/</a></span>
-        <span class="folder text-uppercase"><a href="https://github.com/crivotz/gcheck"
+        <span class="folder"><a href="https://github.com/crivotz/gcheck"
             target="_blank">gcheck/</a></span>
-        <span class="folder text-uppercase"><a href="https://www.aretes.net" target="_blank">work/</a></span>
-      </div>
+        <span class="folder"><a href="https://www.aretes.net" target="_blank">work/</a></span>
+      </span>
 
       <span class="prompt">❯</span> _
     </pre>
