--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
       JavaScript, C#, and Cloud Solutions
 
       <span class="prompt">❯</span> <span class="command">cat about.md</span>
-      - <span class="nf nf-md-flag"></span> Based in Italy
-      - <span class="nf nf-dev-ruby"></span> Ruby on Rails specialist, focused on elegant, idiomatic code
-      - <span class="nf nf-fa-bolt"></span> Proficient in JavaScript, Bootstrap, C#, PHP
-      - <span class="nf nf-fa-cloud"></span> Experienced with all major cloud platforms, mainly Google Cloud Platform
-      - <span class="nf nf-oct-code"></span> Advocate for clean, readable, robust code
-      - <span class="nf nf-faemountains"></span> Climbing enthusiast
-      - <span class="nf nf-fa-dice_d20"></span> Tabletop RPG fan
+      - 🇮🇹 Based in Italy
+      - 💎 Ruby on Rails specialist, focused on elegant, idiomatic code
+      - ⚡ Proficient in JavaScript, Bootstrap, C#, PHP
+      - ☁️ Experienced with all major cloud platforms, mainly Google Cloud Platform
+      - 💻 Advocate for clean, readable, robust code
+      - 🧗‍♂️ Climbing enthusiast
+      - 🎲 Tabletop RPG fan
 
       <span class="prompt">❯</span> <span class="command">cat stack.md</span>
       - OS: Debian — reliable, stable, dev-friendly
-      - Editor: Neovim (nv-ide)
+      - Editor: Neovim (<a href="https://github.com/crivotz/nv-ide" target="_blank">nv-ide</a>)
       - Shell: zsh + zinit
       - Terminal: Ghostty
       - Dotfiles: <a href="https://github.com/crivotz/dot_files" target="_blank">dot_files</a>
