Refine Ruby on Rails description and cloud platforms
Removed redundant phrase and updated cloud platform experience.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 
       <span class="prompt">❯</span> <span class="command">cat about.md</span>
       - 🇮🇹 Based in Italy
-      - 💎 Ruby on Rails specialist, focused on elegant, idiomatic code
+      - 💎 Ruby on Rails specialist
       - ⚡ Proficient in JavaScript, Bootstrap, C#, PHP
-      - ☁️ Experienced with all major cloud platforms, mainly Google Cloud Platform
-      - 💻 Advocate for clean, readable, robust code
+      - ☁️ Experienced with all major cloud platforms, mainly Google Cloud Platform and AWS
       - 🧗‍♂️ Climbing enthusiast
       - 🎲 Tabletop RPG fan
 
